@@ -56,6 +56,9 @@ Trunk -  Unreleased
     HIVE-1072. Show table extended to error out when the partition does not exist.
     (Yongqiang He via zshao)
 
+    HIVE-1085. ColumnarSerde should not be the default Serde when user 
+    specified a fileformat using 'stored as' (Yongqiang He via Ning Zhang)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
